@@ -16,6 +16,14 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
+		<gmaven-plugin.version>1.6</gmaven-plugin.version>
+		<maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+		<version.spock>1.2-groovy-2.4</version.spock>
+		<version.groovy>2.4.15</version.groovy>
+		<org.jgroups.version>4.0.17.Final</org.jgroups.version>
+		<org.objenesis.version>2.6</org.objenesis.version>
+		<net.bytebuddy.version>1.8.21</net.bytebuddy.version>
+
         <version.junit.junit>4.12</version.junit.junit>
         <version.org.jmockit.jmockit>1.38</version.org.jmockit.jmockit>
 
@@ -25,8 +33,29 @@
         <version.joda.time>2.9.7</version.joda.time>
     </properties>
 
-    <build>
-        <finalName>broker</finalName>
+		<pluginManagement>
+			<plugins>
+				<!-- Compile -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven.compiler.plugin}</version>
+					<configuration>
+						<source>${maven.compiler.source}</source>
+						<target>${maven.compiler.target}</target>
+					</configuration>
+				</plugin>
+        <plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-surefire-plugin</artifactId>
+        	<version>2.9</version>
+        	<configuration>
+        		<argLine>-Djdk.attach.allowAttachSelf</argLine>
+        	</configuration>
+        </plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
         <pluginManagement>
             <plugins>
